<resources>
    <string name="app_name">OBDCheckerforAutoPhix1.0</string>
    <string name="main_tv_obd">OBD</string>
    <string name="main_tv_special">Special</string>
    <string name="main_tv_persional">Persional</string>
    <string name="main_obd_connect">Connect</string>
    <string name="main_tv_obd_connectdetail_not">Please connect to the device...</string>
    <string name="main_tv_obd_connectdetail_do">Connect to the device successfully</string>
    <string name="dashboards">Dashboards</string>
    <string name="diagnostics">Diagnostics</string>
    <string name="montiors">Montiors</string>
    <string name="logs">Logs</string>
    <string name="performance">Performance</string>
    <string name="settings">Settings</string>
    <string name="rescan">Rescan</string>
    <string name="loading">Loading...</string>
    <string name="edit_dashboards">Edit Dashboards</string>
    <string name="size_and_location">Size and Location</string>
    <string name="display_configuration">Display Configuration</string>
    <string name="remove_display">Remove Display</string>
    <string name="drag_and_move">Drag and Move</string>
    <string name="bring_to__front">Bring to Front</string>
    <string name="edit_display">Edit Display</string>
    <string name="dashboards_style">Dashboards Style</string>
    <string name="add_display">Add Display</string>
    <string name="add_dashboars">Add Dashboards</string>
    <string name="add_dashboar">Add Dashboard</string>
    <string name="remove_dashboards">Remove Dashboards</string>
    <string name="load_default_dashboards">Load Default Dashboards</string>
    <string name="toggle_hud_mode">Toggle HUD Mode</string>
    <string name="calibrate_device_sensors">Calibrate Device Sensors</string>
    <string name="instant_fuel_economy">Instant fuel economy</string>
    <string name="range">RANGE</string>
    <string name="pid">PID</string>
    <string name="number_of_decimals">Number of Decimals</string>
    <string name="zero">Zero</string>
    <string name="mulitiplier">Miltplier</string>
    <string name="x_one">X1</string>
    <string name="ok">OK</string>
    <string name="yourinputisincorrectPleasereenterit">Your input is incorrect. Please re-enter it.</string>
    <string name="dashboardsMode">Dashboards Mode</string>
    <string name="classic">Classic</string>
    <string name="removeDashboards">Remove Dashboards</string>
    <string name="style">Style</string>
    <string name="cancel">Cancel</string>
    <string name="value">Value</string>
    <string name="frame">Frame</string>
    <string name="axis">Axis</string>
    <string name="needle">Needle</string>
    <string name="range_new">Range</string>
    <string name="rangles">RANGLES</string>
    <string name="start_angle">Start Angle</string>
    <string name="end_angle">End Angle</string>
    <string name="background_color">BACKGROUND COLOR</string>
    <string name="inner_color">Inner Color</string>
    <string name="outer_color">Outer Color</string>
    <string name="title_label">TITLE LABEL</string>
    <string name="title_color">Title Color</string>
    <string name="font_scale">Font Scale</string>
    <string name="position">Position</string>
    <string name="value_label">VALUE LABEI</string>
    <string name="value_visible">Value Visible</string>
    <string name="value_color">Value Color</string>
    <string name="units_label">UNITS LABEL</string>
    <string name="units_color">Units Color</string>
    <string name="vertical_position">Vertical Position</string>
    <string name="horizontal_position">Horizontal Position</string>
    <string name="major_ticks">MAJOR TICKS</string>
    <string name="width_new">Width</string>
    <string name="lenght">Length</string>
    <string name="color">Color</string>
    <string name="minor_ticks">MINOR TICKS</string>
    <string name="lables">LABLES</string>
    <string name="visible">Visible</string>
    <string name="rotate">Rotate</string>
    <string name="offest_form_tickline">Offest From Tickline</string>
    <string name="labels">LABELS</string>
    <string name="knob">KNOB</string>
    <string name="radius">Radius</string>
    <string name="fill">FILL</string>
    <string name="enabled">Enabled</string>
    <string name="inner_position">Inner Position</string>
    <string name="outer_position">Outer Position</string>
    <string name="color_selector">Color Selector</string>
    <string name="gradient_radius">Gradient Radius</string>
    <string name="poniter">PONITER</string>
    <string name="fill_enabled">Fill Enabled</string>
    <string name="frame_scale">Frame Scale</string>
    <string name="frame_color">Frame Color</string>
    <string name="customize">Customize</string>
    <string name="are_you_sure_you_want_to_remove_this_item">Are you sure you want to remove this item?</string>
    <string name="no">NO</string>
    <string name="yes">YES</string>
    <string name="trouble_code">Trouble Code</string>
    <string name="trouble_codes">Trouble Codes</string>
    <string name="freeze_frame">Freeze Frame</string>
    <string name="readiness_test">Readiness Test</string>
    <string name="report">Report</string>
    <string name="load_warring">This will delete all of the existing dashboards and load the default set of dashboards . Do you want to continue?</string>
    <string name="wait_detail">Checking the power system, please wait ...</string>
    <string name="total">Total :</string>
    <string name="important">Important :</string>
    <string name="clear_fault_codes">Clear fault codes</string>
    <string name="historical_trouble_code">Historical trouble code</string>
    <string name="complete">Complete</string>
    <string name="undfinished">Undfinished</string>
    <string name="not_support">Not Support</string>
    <string name="diagnostic_report">Diagnostic Report</string>
    <string name="monitor">Monitor</string>
    <string name="oxyzen_sensorsmode05">Oxygen Sensors(Modes $05)</string>
    <string name="om_board_monitoringmode05">Om-Board Monitoring(Modes $06)</string>
    <string name="vehicle_infomantionmode09">Vehicle Information(Modes $09)</string>
    <string name="freeze_frame_dtc">FREEZE FRAME DTC</string>
    <string name="p0103">P0103</string>
    <string name="freeze_frame_Big">FREEZE FRAME</string>
    <string name="history_codes">History Codes</string>
    <string name="ford">FORD</string>
    <string name="minmorethanmax">The minimum value you enter can not be greater than the maximum value</string>
    <string name="graphs">Graphs</string>
    <string name="trips">Trips</string>
    <string name="files">Files</string>
    <string name="graphitem1">Graph Item 1</string>
    <string name="graphitem2">Graph Item 2</string>
    <string name="graphitem3">Graph Item 3</string>
    <string name="graphitem4">Graph Item 4</string>
    <string name="select">Select</string>
    <string name="smoothing">Smoothing</string>
    <string name="edit">Edit</string>
    <string name="distance">Distance</string>
    <string name="fuel">Fuel</string>
    <string name="fuel_economy">Fuel Economy</string>
    <string name="reset">Reset</string>
    <string name="delete">Delete</string>
    <string name="delete_file_dia">Are you sure you wang to delete all log files ?</string>
    <string name="monitortests">Monitor Tests</string>
    <string name="osenstors">O2 Sensors</string>
    <string name="modesix">Mode $06</string>
    <string name="modenine">Mode $09</string>
    <string name="summary">Summary</string>
    <string name="testresults">Test Results</string>
    <string name="available">Available</string>
    <string name="min">Min</string>
    <string name="max">Max</string>
    <string name="units">Units</string>
    <string name="banksensor">Bank 1 - Sensor 3</string>
    <string name="hud">HUD</string>
    <string name="seletecolor">Select color</string>
    <string name="green">Green</string>
    <string name="lightbule">Light blue</string>
    <string name="white">White</string>
    <string name="yellow">Yellow</string>
    <string name="blue">Blue</string>
    <string name="personal">Personal</string>
    <string name="menu">Menu</string>
    <string name="name">NAME</string>
    <string name="vehicleidentificationnumber">VEHICLE IDENTIFICATION NUMBER</string>
    <string name="identificationdemo">1A1J5444R725236</string>
    <string name="year">YEAR</string>
    <string name="onenineninesix">1996</string>
    <string name="make">MAKE</string>
    <string name="ac">AC</string>
    <string name="model">MODEL</string>
    <string name="cobra">Cobra</string>
    <string name="option">OPTION</string>
    <string name="optiontatil">Option</string>
    <string name="type">TYPE</string>
    <string name="fueltype">FUEL TYPE</string>
    <string name="gasolinepertrol">Gasoline/pertrol</string>
    <string name="sedan">Sedan</string>
    <string name="enginesizelitres">ENGINE SIZE(LIRES)</string>
    <string name="twonumber">2</string>
    <string name="volumetricefficiency">VOLUMETRIC EFFICIENCY(%)</string>
    <string name="sixfive">65</string>
    <string name="brakespecificfuelconsumption">BRAKE SPECIFIC FUEL CONSUMPTION(LB/HP·HR)</string>
    <string name="zeropointfourfive">0.45</string>
    <string name="fuelcalculationmethod">FUEL CALCULATION METHOD</string>
    <string name="massairflowrate">Mass air flow rate</string>
    <string name="fueltankcapacitygal">FUEL TANK CAPACITY (GAL)</string>
    <string name="onefour">14.0</string>
    <string name="fuelcostperunit">FUEL COST PER UNIT ($)</string>
    <string name="fourdetail">4.0</string>
    <string name="vehiclespeedacalefactor">VEHICLE SPEED SCALE FACTOR</string>
    <string name="onedetail">1</string>
    <string name="menudialog">MENU</string>
    <string name="deletevehicle">Delete Vehicle</string>
    <string name="selectvehicle">Select Vehicle</string>
    <string name="areyousureyouwantdelete">Are you sure you want to delete theactive vehicle</string>
    <string name="acura">Acura</string>
    <string name="alfaromeo">Alfa Romeo</string>
    <string name="alpina">Alpina</string>
    <string name="ariel">Ariel</string>
    <string name="aceca">Aceca</string>
    <string name="truck">Truck</string>
    <string name="minivan">Minivan</string>
    <string name="van">Van</string>
    <string name="sportscar">SportsCar</string>
    <string name="suv">SUV</string>
    <string name="eeightfive">E85</string>
    <string name="eonezerozero">E100</string>
    <string name="diesel">Diesel</string>
    <string name="none">None</string>
    <string name="intakemanifoldabsolutepressure">Intake manifold absolute pressure</string>
    <string name="directfuelrate">Direct Fuel Rate</string>
    <string name="chart">Chart</string>
    <string name="data">Data</string>
    <string name="timemileage">Time/Mileage</string>
    <string name="time">Time</string>
    <string name="mileage">Mileage</string>
    <string name="playback">Playback</string>
    <string name="info">Info</string>
    <string name="averageeconomy">Average economy</string>
    <string name="preferences">Preferences</string>
    <string name="communications">Communications</string>
    <string name="obdcheck">OBDCHECK</string>
    <string name="company">Company</string>
    <string name="obdsolutions">OBD Solutions</string>
    <string name="version">Version</string>
    <string name="copyright">Copyright</string>
    <string name="architecture">Architecture</string>
    <string name="bit64">64-bit</string>
    <string name="developedby">Developed by</string>
    <string name="autophix">Autophix</string>
    <string name="startingspeed">Starting Speed</string>
    <string name="pleaseenteravalueforthestartingspeed">Please enter a value for the starting speed.</string>
    <string name="endspeed">End speed</string>
    <string name="pleaseenterthestartspeed">Please enter the start speed!</string>
    <string name="password">Password</string>
</resources>