<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="@dimen/x60"
                android:background="@color/colorOBDbackground"
                android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/x25"
        android:layout_marginLeft="@dimen/x15"
        android:layout_marginTop="@dimen/x30"
        android:text="@string/testresults"
        android:textColor="@color/colorTextColorDemo"
        android:textSize="@dimen/x16"/>

    <TextView
        android:text="@string/available"
        android:layout_width="@dimen/x52"
        android:layout_height="@dimen/x20"
        android:singleLine="true"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="@dimen/x237"
        android:textColor="@color/colorTextColorDemo"
        android:textSize="@dimen/x12"/>



    <TextView
        android:text="@string/complete"
        android:layout_height="@dimen/x20"
        android:layout_width="@dimen/x52"
        android:singleLine="true"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="@dimen/x306"
        android:textColor="@color/colorTextColorDemo"
        android:textSize="@dimen/x12"/>


</RelativeLayout>