<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/colorOBDbackground"
              android:clickable="true"
              android:orientation="vertical">

    <!--标题栏-->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/x44">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/communications"
            android:textColor="@color/colorDashboardsPointer"
            android:textSize="@dimen/x18"/>


        <ImageView
            android:layout_width="@dimen/x10"
            android:layout_height="@dimen/x18"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/x15"
            android:scaleType="fitXY"
            android:src="@drawable/return_ui"/>


        <!--上方透明的按钮-->
        <ImageView
            android:id="@+id/iv_settings_information_finish"
            android:layout_width="@dimen/x50"
            android:layout_height="match_parent"
            android:background="@color/colorTransparent"/>

    </RelativeLayout>
    <!--line-->
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="@dimen/x1"
        android:src="@drawable/line_ui"/>


    <!--Preferences-->
    <RelativeLayout
        android:layout_marginTop="@dimen/x34"
        android:layout_width="match_parent"
        android:layout_height="@dimen/x44"
        android:background="@color/colorDialogBackGround">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/x15"
            android:gravity="center_vertical"
            android:text="@string/preferences"
            android:textColor="@color/colorTextColorDemo"
            android:textSize="@dimen/x16"/>




        <!--橘色的字-->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginRight="@dimen/x15"
            android:gravity="center_vertical|right"
            android:text="@string/obdcheck"
            android:textColor="@color/textcolortime"
            android:textSize="@dimen/x16"/>


    </RelativeLayout>
    <!--Line-->
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="@dimen/x1"
        android:src="@drawable/line_ui"/>


    <!--Company-->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/x44"
        android:background="@color/colorDialogBackGround">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/x15"
            android:gravity="center_vertical"
            android:text="@string/company"
            android:textColor="@color/colorTextColorDemo"
            android:textSize="@dimen/x16"/>




        <!--橘色的字-->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginRight="@dimen/x15"
            android:gravity="center_vertical|right"
            android:text="@string/obdsolutions"
            android:textColor="@color/textcolortime"
            android:textSize="@dimen/x16"/>


    </RelativeLayout>
    <!--Line-->
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="@dimen/x1"
        android:src="@drawable/line_ui"/>


    <!--Version-->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/x44"
        android:background="@color/colorDialogBackGround">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/x15"
            android:gravity="center_vertical"
            android:text="@string/version"
            android:textColor="@color/colorTextColorDemo"
            android:textSize="@dimen/x16"/>




        <!--橘色的字-->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginRight="@dimen/x15"
            android:gravity="center_vertical|right"
            android:text="0.0.1"
            android:textColor="@color/textcolortime"
            android:textSize="@dimen/x16"/>


    </RelativeLayout>
    <!--Line-->
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="@dimen/x1"
        android:src="@drawable/line_ui"/>

    <!--Copyright-->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/x44"
        android:background="@color/colorDialogBackGround">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/x15"
            android:gravity="center_vertical"
            android:text="@string/copyright"
            android:textColor="@color/colorTextColorDemo"
            android:textSize="@dimen/x16"/>





        <!--橘色的字-->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginRight="@dimen/x15"
            android:gravity="center_vertical|right"
            android:text="copyrightautophix2017"
            android:textColor="@color/textcolortime"
            android:textSize="@dimen/x16"/>


    </RelativeLayout>
    <!--Line-->
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="@dimen/x1"
        android:src="@drawable/line_ui"/>



    <!--Architecture-->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/x44"
        android:background="@color/colorDialogBackGround">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/x15"
            android:gravity="center_vertical"
            android:text="@string/architecture"
            android:textColor="@color/colorTextColorDemo"
            android:textSize="@dimen/x16"/>





        <!--橘色的字-->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginRight="@dimen/x15"
            android:gravity="center_vertical|right"
            android:text="@string/bit64"
            android:textColor="@color/textcolortime"
            android:textSize="@dimen/x16"/>


    </RelativeLayout>
    <!--Line-->
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="@dimen/x1"
        android:src="@drawable/line_ui"/>


    <!--Developed by-->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/x44"
        android:background="@color/colorDialogBackGround">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/x15"
            android:gravity="center_vertical"
            android:text="@string/developedby"
            android:textColor="@color/colorTextColorDemo"
            android:textSize="@dimen/x16"/>





        <!--橘色的字-->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginRight="@dimen/x15"
            android:gravity="center_vertical|right"
            android:text="@string/autophix"
            android:textColor="@color/textcolortime"
            android:textSize="@dimen/x16"/>


    </RelativeLayout>
    <!--Line-->
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="@dimen/x1"
        android:src="@drawable/line_ui"/>



</LinearLayout>